--- a/Resume.html
+++ b/Resume.html
@@ -49,9 +49,9 @@
         </nav>
         <br>
         <main class="item resume">
-            <div class="center">Ryan Ragmani</div>
-            <div class="center">ryansimportantemail6@gmail.com</div>
-            <div class="center">(857) 205-4618</div>
+            <div class="lead text-center display-6">Ryan Ragmani</div>
+            <div class="lead text-center display-6">ryansimportantemail6@gmail.com</div>
+            <div class="lead text-center display-6">(857) 205-4618</div>
             <br>
             <div>Summary:</div>
             <div>Grounded and solution oriented computer programmer with a wide variety of professional experiences. Motivated and passionate about self educating for the next generation of technology.</div>
