--- a/About_Me.html
+++ b/About_Me.html
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </nav>
-        <h1 class="center">About Me</h1>
+        <h1 class="lead text-center fw-bold display-1">About Me</h1>
         <p>I am simply a person that exists but a person with interests and personality.</p>
         <img src="https://www.cnet.com/a/img/resize/ea66ddc9276eef2884da221adc70ed1cf1545951/hub/2021/10/16/11804578-0dbc-42af-bcd1-3bc7b1394962/the-batman-2022-teaser-poster-batman-01-promo.jpg?auto=webp&fit=crop&height=675&width=1200" alt="Batman">
         <p>My interests are coding, animation, robotics, gaming, etc. So far I am currently learning other coding languages like Python. I am also doing other things outside of coding like learning how to animate.</p>
