--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
         <main>
-            <h1 class="center">WELCOME</h1>
+            <h1 class="lead text-center fw-bold display-1">WELCOME</h1>
             <p>Hello my name is Ryan A. Ragmani. This site will like to introduce you to my portfolio.</p>
             <img src="https://static.miraheze.org/greatcharacterswiki/thumb/0/09/Goku.png/640px-Goku.png" alt="goku" height="300" width="2000">
             <p>A portfolio that introduces to who I am, what my strengths are, and my experiences. This entire webpage will explain all of my growth, my own interests, and what my life is all about.</p>
