--- a/About_Me.html
+++ b/About_Me.html
@@ -28,20 +28,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Resume.html">Resume</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Blender_3D.html">Blender 3D</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Dragon_Ball.html">Dragon Ball</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="html.html">HTML</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Sonic.html">Sonic</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Mega_Man.html">Mega Man</a>
+                        <li>
+                            <a class="nav-link" href="misc.html">Miscellaneous</a>
                         </li>
                     </ul>
                 </div>
