--- a/Blender_3D.html
+++ b/Blender_3D.html
@@ -10,9 +10,9 @@
         <nav class="navbar navbar-expand-md navbar-success">
             <div class="container xxl">
                 <a href="index.html" class="navbar-brand">
-                    <span class="fw-bold text-secondary">
-                        Portfolio
-                    </span>
+                        <span class="fw-bold text-secondary">
+                            Portfolio
+                        </span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -28,20 +28,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="Resume.html">Resume</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Blender_3D.html">Blender 3D</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Dragon_Ball.html">Dragon Ball</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="html.html">HTML</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Sonic.html">Sonic</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Mega_Man.html">Mega Man</a>
+                        <li>
+                            <a class="nav-link" href="misc.html">Miscellaneous</a>
                         </li>
                     </ul>
                 </div>
