redoing the Sonic webpage (WIP)

--- a/Sonic.html
+++ b/Sonic.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
-    <body style="background-color:black">
+    <body style="background-color: #1f00ad">
         <nav class="navbar navbar-expand-md navbar-success">
             <div class="container xxl">
                 <a href="index.html" class="navbar-brand">
@@ -36,15 +36,21 @@
             </div>
         </nav>
         <main>
-            <p>Sonic is a game franchise created by Yuji Naka, Naoto Ohshima, and Hirokazu Yasuhara and owned by Sega. The games mainly follow Sonic, a fast blue anthropomorphic hedgehog who protects the innocent from a evil scientist with various of gadgets.</p>
-            <img src="https://yt3.googleusercontent.com/ieZ0_b-wQddPNaHUjoRURtgKYl_077NlA1-Yf8nq1fGMfWmTFaE1dKSM94KgmF_MzD8z6jKjVw=s900-c-k-c0x00ffffff-no-rj" alt="Sonic Superstars Render" width="500" height="500">
-            <p>Sonic’s main genre of games is platforming but had other genre games such as racing, fighting, party, and sports. The franchise also made profit out of animated series, films, and various of merchandising.</p>
-            <img src="https://mario.wiki.gallery/images/thumb/b/ba/Sonic_SSBU.png/1200px-Sonic_SSBU.png" alt="Sonic SSB Render" width="500" height="500">
-            <p>Despite with the occasional struggles of this franchise it is one of the bestselling game franchises grossing over $5 billion by 2014 and the genesis games being the representative of 90’s culture.</p>
+            <div class="sonic-section">
+                <div class="sonic-ground"></div>
+                <div class="sonic-background"></div>
+                <div class="whitespace"></div>
+            </div>
+            <div class="sonic-section2">
+                <p>Sonic is a game franchise created by Yuji Naka, Naoto Ohshima, and Hirokazu Yasuhara and owned by Sega. The games mainly follow Sonic, a fast blue anthropomorphic hedgehog who protects the innocent from a evil scientist with various of gadgets.</p>
+                <p>Sonic’s main genre of games is platforming but had other genre games such as racing, fighting, party, and sports. The franchise also made profit out of animated series, films, and various of merchandising.</p>
+                <p>Despite with the occasional struggles of this franchise it is one of the bestselling game franchises grossing over $5 billion by 2014 and the genesis games being the representative of 90’s culture.</p>
+            </div>
         </main>
         <footer>
             <p class="theend">&copy; Copyright Reserved</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="script.js"></script>
     </body>
 </html>
