--- a/Sonic.html
+++ b/Sonic.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body style="background-color: #1f00ad">
-        <nav class="navbar navbar-expand-md navbar-success">
+        <nav class="navbar navbar-expand-md navbar-success sonic-nav">
             <div class="container xxl">
                 <a href="index.html" class="navbar-brand">
                         <span class="fw-bold text-secondary">
@@ -37,20 +37,61 @@
         </nav>
         <main>
             <div class="sonic-section">
-                <div class="sonic-ground"></div>
                 <div class="sonic-background"></div>
+                <div class="rellax sonic-sky" data-rellax-speed="1"></div>
+                <div class="rellax sonic-mountain" data-rellax-speed="1"></div>
+                <div class="rellax sonic-piller" data-rellax-speed="-2"></div>
+                <div class="sonic-ground"></div>
                 <div class="whitespace"></div>
             </div>
             <div class="sonic-section2">
-                <p>Sonic is a game franchise created by Yuji Naka, Naoto Ohshima, and Hirokazu Yasuhara and owned by Sega. The games mainly follow Sonic, a fast blue anthropomorphic hedgehog who protects the innocent from a evil scientist with various of gadgets.</p>
-                <p>Sonic’s main genre of games is platforming but had other genre games such as racing, fighting, party, and sports. The franchise also made profit out of animated series, films, and various of merchandising.</p>
-                <p>Despite with the occasional struggles of this franchise it is one of the bestselling game franchises grossing over $5 billion by 2014 and the genesis games being the representative of 90’s culture.</p>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <h1 class="sonic-header">SONIC</h1>
+                <br>
+                <p class="sonic-text">Sonic is a game franchise created by Yuji Naka, Naoto Ohshima, and Hirokazu Yasuhara and owned by Sega. The games mainly follow Sonic, a fast blue anthropomorphic hedgehog who protects the innocent from an evil scientist with various of gadgets.</p>
+                <br>
+                <p class="sonic-text">Sonic’s main genre of games is platforming but had other genre games such as racing, fighting, party, and sports. The franchise also made profit out of animated series, films, and various of merchandising.</p>
+                <br>
+                <p class="sonic-text">Despite with the occasional struggles of this franchise it is one of the bestselling game franchises grossing over $5 billion by 2014 and the genesis games being the representative of 90’s culture.</p>
             </div>
         </main>
-        <footer>
-            <p class="theend">&copy; Copyright Reserved</p>
-        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="script.js"></script>
+        <script src="parallax_practice2.js"></script>
+        <script type="text/javascript">
+            var rellax = new Rellax('.rellax')
+        </script>
+        <script src="script.js"></script>
+        <script type="text/javascript">
+            var rellax = new Rellax('.rellax')
+        </script>
     </body>
 </html>
