--- a/Resume.html
+++ b/Resume.html
@@ -3,82 +3,49 @@
     <head>
         <meta charset="UTF-8">
         <title>Resume</title>
-        <link rel="stylesheet" href="style.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="book.css">
+        <script src="book.js" defer></script>
+        <script src="https://kit.fontawesome.com/0a5084e88c.js" crossorigin="anonymous"></script>
     </head>
     <body style="background-color:black">
-        <nav class="navbar navbar-expand-md navbar-success">
-            <div class="container xxl">
-                <a href="index.html" class="navbar-brand">
-                        <span class="fw-bold text-secondary">
-                            Portfolio
-                        </span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end align-center">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="About_Me.html">About Me</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="Resume.html">Resume</a>
-                        </li>
-                        <li>
-                            <a class="nav-link" href="misc.html">Miscellaneous</a>
-                        </li>
-                    </ul>
+        <!--Previous Button-->
+        <button id="prev-btn">
+            <i class="fas fa-arrow-circle-left"></i>
+        </button>
+
+        <!--Book-->
+        <div id="book" class="book">
+            <!--Paper 1-->
+            <div id="p1" class="paper">
+                <div class="front">
+                    <div id="f1" class="front-content">
+                        <h1>Resume</h1>
+                    </div>
+                </div>
+                <div class="back">
+                    <div id="b1" class="back-content">
+                        <img src="https://media.discordapp.net/attachments/593539063412293633/1217887135760121856/Screenshot_2024-03-14_at_12.52.07_PM_1.png?ex=6605a8c8&is=65f333c8&hm=694944ea3f23fe1bbb84cf6e92f9228f68d204faefe83f988fb808d70734002d&=&format=webp&quality=lossless&width=866&height=1332" alt="Resume 1/2">
+                    </div>
                 </div>
             </div>
-        </nav>
-        <br>
-        <main class="item resume">
-            <div class="lead text-center display-6">Ryan Ragmani</div>
-            <div class="lead text-center display-6">ryansimportantemail6@gmail.com</div>
-            <div class="lead text-center display-6">(857) 205-4618</div>
-            <br>
-            <div>Summary:</div>
-            <div>Grounded and solution oriented computer programmer with a wide variety of professional experiences. Motivated and passionate about self educating for the next generation of technology.</div>
-            <br>
-            <div>IT Skills:</div>
-            <ul>
-                <li>Basic HTML knowledge</li>
-                <li>Some CSS understanding</li>
-                <li>Very little Python experience</li>
-                <li>Good amount of Microsoft Excel knowledge</li>
-                <li>Beginner user of VS Code</li>
-            </ul>
-            <div>Soft Skills:</div>
-            <ul>
-                <li>Communication</li>
-                <li>Teamwork</li>
-                <li>Flexibility</li>
-                <li>Problem Solving</li>
-                <li>Self-management</li>
-            </ul>
-            <div>Work Experience:</div>
-            <ul>
-                <li>Flare's Education Training (2022-Present)</li>
-            </ul>
-            <div>Interests:</div>
-            <ul>
-                <li>Video Game Programming</li>
-                <li>3D Animation</li>
-                <li>Robotics</li>
-                <li>Computer components</li>
-            </ul>
-            <div>Education:</div>
-            <ul>
-                <li>Madison Park</li>
-            </ul>
-        </main>
-        <footer>
-            <p class="theend">&copy; Copyright Reserved</p>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+            <!--Paper 2-->
+            <div id="p2" class="paper">
+                <div class="front">
+                    <div id="f2" class="front-content">
+                        <img src="https://media.discordapp.net/attachments/593539063412293633/1221797451325771797/Screenshot_2024-03-14_at_12.52.12_PM_1_1.png?ex=6613e28c&is=66016d8c&hm=fb251a03e04eb2f8a3d4eef3a4271a1311fa176643efbb4d8ef1e17a6727e443&=&format=webp&quality=lossless&width=1038&height=788" alt="Resume 2/2">
+                    </div>
+                </div>
+                <div class="back">
+                    <div id="b2" class="back-content">
+                        <h1>End</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Next Button-->
+        <button id="next-btn">
+            <i class="fas fa-arrow-circle-right"></i>
+        </button>
     </body>
     </html>
