--- a/vocab.html
+++ b/vocab.html
@@ -5,6 +5,49 @@
       <title>Title</title>
   </head>
   <body>
-
+    <details>
+        <summary>Layer</summary>
+        Layer is a set of hierarchical structure that gives separate functions or responsibilities within a system.
+    </details>
+    <details>
+        <summary>Application</summary>
+        A program designed to handle specific tasks for user.
+    </details>
+    <details>
+        <summary>Software</summary>
+        Software is a set of instructions, data, or program.
+    </details>
+    <details>
+        <summary>Logic Layer</summary>
+        The part of the program classes determine the info needed to solve problems, manipulate the info, and return results to the presentation layer for formatting.
+    </details>
+    <details>
+        <summary>Authorization</summary>
+        Allowed access for someone to get data or information for themselves.
+    </details>
+    <details>
+        <summary>User Interface</summary>
+        The interaction between the human and communication.
+    </details>
+    <details>
+        <summary>Persistence Layer</summary>
+        A way to save and retrieve data that the applications use.
+    </details>
+    <details>
+        <summary>Logging</summary>
+        The process of recording or storing information and/or messages.
+    </details>
+    <details>
+        <summary>Error Handling</summary>
+        The process of managing and addressing errors that have the possibility of occurring during the execution of the program.
+    </details>
+    <details>
+        <summary>Authentication</summary>
+        an identification method, such as a password or unique identification code that is assigned to a user to identify themselves.
+    </details>
+    <details>
+        <summary>Cross-cutting concerns</summary>
+        A concern or responsibility that affects multiple layers of code.
+    </details>
   </body>
 </html>
