--- a/projectman.html
+++ b/projectman.html
@@ -31,11 +31,11 @@
             <div>
                 <h2 class="superduperclass">Sprint</h2>
                 <hr>
-                <p class="superduperclass">A mini</p>
+                <p class="superduperclass">A mini-project aimed to achieve clear goals within a set time frame. A sprint is used for 1-4 weeks.</p>
                 <br>
             </div>
             <div>
-                <h2 class="superduperclass"></h2>
+                <h2 class="superduperclass">Task</h2>
                 <hr>
                 <p class="superduperclass"></p>
                 <br>
