--- a/projectman.html
+++ b/projectman.html
@@ -37,42 +37,42 @@
             <div>
                 <h2 class="superduperclass">Task</h2>
                 <hr>
-                <p class="superduperclass"></p>
+                <p class="superduperclass">A task list a set of tasks that each render on a separate line with a clickable checkbox.</p>
                 <br>
             </div>
             <div>
                 <h2 class="superduperclass"></h2>
                 <hr>
-                <p class="superduperclass"></p>
+                <p class="superduperclass">An accumulation of tasks unperformed or materials not processed.</p>
                 <br>
             </div>
             <div>
-                <h2 class="superduperclass"></h2>
+                <h2 class="superduperclass">Unit Test</h2>
                 <hr>
-                <p class="superduperclass"></p>
+                <p class="superduperclass">A unit test is the verification that a small piece of code functions and the purpose is to test if it works correctly. Unit testing is a huge part of software development because it tests if the code is working properly before combining it with the rest of the system.</p>
                 <br>
             </div>
             <div>
-                <h2 class="superduperclass"></h2>
+                <h2 class="superduperclass">Waterfa;; Methodology</h2>
                 <hr>
-                <p class="superduperclass"></p>
+                <p class="superduperclass">The Waterfall methodology — also known as the Waterfall model — is a sequential development process that flows like a waterfall through all phases of a project (analysis, design, development, and testing, for example), with each phase completely wrapping up before the next phase begins.</p>
                 <br>
             </div>
             <div>
-                <h2 class="superduperclass"></h2>
+                <h2 class="superduperclass">Maintenance Branch</h2>
                 <hr>
-                <p class="superduperclass"></p>
+                <p class="superduperclass">Maintenance Branch is a branch that is used to quicky patch production releases.</p>
                 <br>
             </div>
             <div>
-                <h2 class="superduperclass"></h2>
+                <h2 class="superduperclass">Agile</h2>
                 <hr>
-                <p class="superduperclass"></p>
+                <p class="superduperclass">Being able to respond to change in an extremely quick manner.</p>
                 <br>
             </div>
         </main>
         <footer>
-
+            <p id="supercopyright">&copy; no actual copyright here, just needed to include a footer.</p>
         </footer>
     </body>
 </html>
